--- a/src/view/jurisdiction/ClassSet/index.module.css
+++ b/src/view/jurisdiction/ClassSet/index.module.css
@@ -1,6 +1,6 @@
-.ArticleInfo >header{
+.classSet >header{
     margin-bottom:20px
 }
-.ArticleInfo >header >*{
+.classSet >header >*{
     margin-right: 15px;
 }
