--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -28,6 +28,7 @@ time, mark, audio, video{
   vertical-align: baseline;
   position: relative;
   box-sizing: border-box;
+  transition: background-color .3s ease;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
@@ -97,3 +98,7 @@ body{
   *zoom: 1;
 }
 
+/* antd图片预览需要加这个，不然不显示预览的图片 */
+.ant-image-preview-content{
+  height: 100vh;
+}
